feat: CNN model implemented

--- a/XCEPTION_Cervical_Cancer.ipynb
+++ b/XCEPTION_Cervical_Cancer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -20,10 +20,13 @@
     "from keras.applications import *\n",
     "from keras.models import Model\n",
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
+    "from keras.applications import imagenet_utils\n",
+    "from keras.applications.inception_v3 import preprocess_input\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "from keras import backend as k\n",
     "\n",
     "from skimage.io import imread, imshow\n",
+    "import cv2\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -635,6 +638,7 @@
    "source": [
     "train_data_dir = 'data/train'\n",
     "test_data_dir = 'data/test'\n",
+    "validation_data_dir = 'data/validation'\n",
     "\n",
     "top_model_weights_path = 'my_xception.h5'\n",
     "results_path = 'results/predictions'\n",
@@ -646,27 +650,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if we are using Inception or Xception, we need to set the inputShape  to 299×299 pixels, followed by updating preprocess  to use a separate pre-processing function that performs a different type of scaling."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "inputShape = (299, 299)\n",
+    "preprocess = preprocess_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# hyper parameters for model\n",
-    "nb_classes = 2  # number of classes\n",
+    "nb_classes = 3  # number of classes\n",
     "based_model_last_block_layer_number = 126  # value is based on based model selected.\n",
-    "img_width, img_height = 150, 150  # change based on the shape/structure of your images\n",
+    "img_width, img_height = 299, 299  # change based on the shape/structure of your images\n",
     "batch_size = 16  # try 4, 8, 16, 32, 64, 128, 256 dependent on CPU/GPU memory capacity (powers of 2 values).\n",
     "nb_epoch = 3  # number of iteration the algorithm gets trained.\n",
-    "learn_rate = 1e-4  # sgd learning rate\n",
-    "momentum = .9  # sgd momentum to avoid local minimum\n",
+    "learn_rate = 0.045  # sgd learning rate\n",
+    "momentum = 0.9  # sgd momentum to avoid local minimum\n",
     "transformation_ratio = .05  # how aggressive will be the data augmentation/transformation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +698,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.4/xception_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
       "Model Loaded!\n"
      ]
     }
@@ -688,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -697,12 +719,12 @@
     "# Top Model Block\n",
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
-    "predictions = Dense(nb_classes, activation='softmax')(x)"
+    "predictions = Dense(nb_classes, activation='relu')(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -728,12 +750,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Read Data and Augment it: Make sure to select augmentations that are appropriate to your images.\n",
+    "# To save augmentations un-comment save lines and add to your flow parameters.\n",
+    "train_datagen = ImageDataGenerator(rescale=1. / 299,\n",
+    "                                   rotation_range=transformation_ratio,\n",
+    "                                   shear_range=transformation_ratio,\n",
+    "                                   zoom_range=transformation_ratio,\n",
+    "                                   cval=transformation_ratio,\n",
+    "                                   horizontal_flip=True,\n",
+    "                                   vertical_flip=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "validation_datagen = ImageDataGenerator(rescale=1. / 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1481 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_generator = train_datagen.flow_from_directory(train_data_dir,\n",
+    "                                                        target_size=(img_width, img_height),\n",
+    "                                                        batch_size=batch_size,\n",
+    "                                                        class_mode='categorical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 444 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_generator = validation_datagen.flow_from_directory(validation_data_dir,\n",
+    "                                                                  target_size=(img_width, img_height),\n",
+    "                                                                  batch_size=batch_size,\n",
+    "                                                                  class_mode='categorical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='nadam',\n",
+    "                  loss='categorical_crossentropy',  # categorical_crossentropy if multi-class classifier\n",
+    "                  metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# checkpoint\n",
+    "filepath=\"weights-improvement-{epoch:02d}-{val_acc:.2f}.hdf5\"\n",
+    "checkpoint = ModelCheckpoint(filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+    "callbacks_list = [checkpoint]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"\\nStarting to Fine Tune Model\\n\")\n",
+    "model.fit_generator(\n",
+    "    train_generator,\n",
+    "    samples_per_epoch=nb_train_samples,\n",
+    "    epochs=nb_epoch,\n",
+    "    validation_data=validation_generator,\n",
+    "    nb_val_samples=nb_validation_samples,\n",
+    "    callbacks=callbacks_list)\n",
+    "print('Finished finetuning')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# serialize model to JSON\n",
+    "model_json = model.to_json()\n",
+    "with open(\"model_xception.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "# serialize weights to HDF5\n",
+    "model.save_weights(\"model_xception.h5\")\n",
+    "print(\"Saved model to disk\")"
+   ]
   }
  ],
  "metadata": {
