File and Dir structure completed

--- a/InceptionV3.ipynb
+++ b/InceptionV3.ipynb
@@ -266,6 +266,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/paperspace/NBs/Cervical_Cancer_Comp/data\n",
+      "/home/paperspace/NBs/Cervical_Cancer_Comp/data/test\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create single 'unknown' class for test set\n",
+    "%cd $DATA_HOME_DIR\n",
+    "%cd test\n",
+    "%mkdir unknown\n",
+    "%mv *.jpg unknown/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
