--- a/InceptionV3.ipynb
+++ b/InceptionV3.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -306,6 +306,9 @@
    "outputs": [],
    "source": [
     "# imports\n",
+    "from keras.layers import *\n",
+    "from keras.optimizers import *\n",
+    "from keras.applications import *\n",
     "from keras.models import Model\n",
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "from keras.applications import imagenet_utils\n",
@@ -316,15 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "train_data_dir = 'data/train'\n",
-    "test_data_dir = 'data/test'\n",
-    "# validation_data_dir = 'data/validation'\n",
+    "train_data_dir = DATA_HOME_DIR+'/train'\n",
+    "test_data_dir = DATA_HOME_DIR+'/test'\n",
+    "validation_data_dir = DATA_HOME_DIR+'/valid'\n",
     "\n",
     "\n",
     "nb_train_samples = 1037\n",
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -349,8 +352,8 @@
     "# hyper parameters for model\n",
     "nb_classes = 3  # number of classes\n",
     "img_width, img_height = 299, 299  # change based on the shape/structure of your images\n",
-    "batch_size = 16  # try 4, 8, 16, 32, 64, 128, 256 dependent on CPU/GPU memory capacity (powers of 2 values).\n",
-    "nb_epoch = 1  # number of iteration the algorithm gets trained. 1 As test run\n",
+    "batch_size = 64  # try 4, 8, 16, 32, 64, 128, 256 dependent on CPU/GPU memory capacity (powers of 2 values).\n",
+    "nb_epoch = 3  # number of iteration the algorithm gets trained. 1 As test run\n",
     "learn_rate = 0.045  # sgd learning rate\n",
     "momentum = 0.9  # sgd momentum to avoid local minimum\n",
     "transformation_ratio = .05  # how aggressive will be the data augmentation/transformation"
@@ -365,11 +368,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Loaded!\n"
+     ]
+    }
+   ],
    "source": [
     "# Pre-Trained CNN Model using imagenet dataset for pre-trained weights\n",
     "base_model = InceptionV3(input_shape=(img_width, img_height, 3), weights='imagenet', include_top=False)\n",
@@ -387,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
