--- a/InceptionV3.ipynb
+++ b/InceptionV3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -28,14 +28,14 @@
    "source": [
     "#Create references to important directories we will use over and over\n",
     "import os, sys\n",
-    "\n",
-    "LESSON_HOME_DIR = '/home/paperspace/NBs/Cervical_Cancer_Comp'\n",
+    "current_dir = os.getcwd()\n",
+    "LESSON_HOME_DIR = current_dir\n",
     "DATA_HOME_DIR = LESSON_HOME_DIR+'/data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -68,31 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data\n",
-      "mkdir: cannot create directory ‘valid’: File exists\n",
-      "mkdir: cannot create directory ‘results’: File exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create directories\n",
-    "%cd $DATA_HOME_DIR\n",
     "%mkdir valid\n",
     "%mkdir results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +90,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data/valid\n"
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n",
+      " Volume in Laufwerk C: hat keine Bezeichnung.\n",
+      " Volumeseriennummer: 661E-8808\n",
+      "\n",
+      " Verzeichnis von C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n",
+      "\n",
+      "17.05.2017  10:56    <DIR>          .\n",
+      "17.05.2017  10:56    <DIR>          ..\n",
+      "               0 Datei(en),              0 Bytes\n",
+      "               2 Verzeichnis(se), 76.071.641.088 Bytes frei\n"
      ]
     }
    ],
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -124,10 +122,10 @@
     {
      "data": {
       "text/plain": [
-       "u'/home/paperspace/NBs/Cervical_Cancer_Comp/data/valid'"
+       "u'C:\\\\Users\\\\Flo\\\\Source\\\\Repos\\\\Cervical_Cancer_Comp\\\\valid'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data/train\n"
+      "[Error 2] Das System kann die angegebene Datei nicht finden: u'C:\\\\Users\\\\Flo\\\\Source\\\\Repos\\\\Cervical_Cancer_Comp/data//train'\n",
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n"
      ]
     }
    ],
