convnet from scratch

--- a/InceptionV3.ipynb
+++ b/InceptionV3.ipynb
@@ -68,38 +68,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#Create directories\n",
-    "%mkdir valid\n",
-    "%mkdir results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n",
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create directories\n",
+    "%mkdir results\n",
+    "%cd $DATA_HOME_DIR\n",
+    "%mkdir valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\valid\n",
       " Volume in Laufwerk C: hat keine Bezeichnung.\n",
       " Volumeseriennummer: 661E-8808\n",
       "\n",
-      " Verzeichnis von C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n",
+      " Verzeichnis von C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\valid\n",
       "\n",
-      "17.05.2017  10:56    <DIR>          .\n",
-      "17.05.2017  10:56    <DIR>          ..\n",
+      "17.05.2017  11:07    <DIR>          .\n",
+      "17.05.2017  11:07    <DIR>          ..\n",
       "               0 Datei(en),              0 Bytes\n",
-      "               2 Verzeichnis(se), 76.071.641.088 Bytes frei\n"
+      "               2 Verzeichnis(se), 67.787.304.960 Bytes frei\n"
      ]
     }
    ],
@@ -114,18 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "u'C:\\\\Users\\\\Flo\\\\Source\\\\Repos\\\\Cervical_Cancer_Comp\\\\valid'"
+       "u'C:\\\\Users\\\\Flo\\\\Source\\\\Repos\\\\Cervical_Cancer_Comp\\\\data\\\\valid'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,17 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Error 2] Das System kann die angegebene Datei nicht finden: u'C:\\\\Users\\\\Flo\\\\Source\\\\Repos\\\\Cervical_Cancer_Comp/data//train'\n",
-      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\valid\n"
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\train\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -168,16 +168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34mresults\u001b[0m/  \u001b[01;34mType_1\u001b[0m/  \u001b[01;34mType_2\u001b[0m/  \u001b[01;34mType_3\u001b[0m/  \u001b[01;34mvalid\u001b[0m/\r\n"
+      " Volume in Laufwerk C: hat keine Bezeichnung.\n",
+      " Volumeseriennummer: 661E-8808\n",
+      "\n",
+      " Verzeichnis von C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\train\n",
+      "\n",
+      "17.05.2017  11:07    <DIR>          .\n",
+      "17.05.2017  11:07    <DIR>          ..\n",
+      "09.03.2017  00:06             6.148 .DS_Store\n",
+      "17.05.2017  11:07    <DIR>          results\n",
+      "09.03.2017  00:37    <DIR>          Type_1\n",
+      "09.03.2017  00:37    <DIR>          Type_2\n",
+      "09.03.2017  00:37    <DIR>          Type_3\n",
+      "               1 Datei(en),          6.148 Bytes\n",
+      "               6 Verzeichnis(se), 67.787.300.864 Bytes frei\n"
      ]
     }
    ],
@@ -192,19 +203,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data\n",
-      "\u001b[0m\u001b[01;34mbak\u001b[0m/  \u001b[01;32mdownload.sh\u001b[0m*  \u001b[01;34mresults\u001b[0m/  \u001b[01;34mtest\u001b[0m/  \u001b[01;31mtest.7z\u001b[0m  \u001b[01;34mtrain\u001b[0m/  \u001b[01;31mtrain.7z\u001b[0m  \u001b[01;34mvalid\u001b[0m/\n",
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data/valid/Type_1\n",
-      "76\n"
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\n",
+      " Volume in Laufwerk C: hat keine Bezeichnung.\n",
+      " Volumeseriennummer: 661E-8808\n",
+      "\n",
+      " Verzeichnis von C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\n",
+      "\n",
+      "17.05.2017  11:07    <DIR>          .\n",
+      "17.05.2017  11:07    <DIR>          ..\n",
+      "09.03.2017  00:37    <DIR>          test\n",
+      "16.05.2017  20:14     2.071.977.419 test.7z\n",
+      "17.05.2017  11:07    <DIR>          train\n",
+      "16.05.2017  21:37     5.944.334.666 train.7z\n",
+      "17.05.2017  11:07    <DIR>          valid\n",
+      "               2 Datei(en),  8.016.312.085 Bytes\n",
+      "               5 Verzeichnis(se), 67.785.396.224 Bytes frei\n",
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\valid\\Type_1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Der Befehl \"wc\" ist entweder falsch geschrieben oder\n",
+      "konnte nicht gefunden werden.\n"
      ]
     }
    ],
@@ -219,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -243,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -266,17 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data\n",
-      "/home/paperspace/NBs/Cervical_Cancer_Comp/data/test\n"
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\n",
+      "C:\\Users\\Flo\\Source\\Repos\\Cervical_Cancer_Comp\\data\\test\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Line magic function `%mv` not found.\n"
      ]
     }
    ],
@@ -297,12 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "from keras.layers import *\n",
@@ -368,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -462,9 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -484,9 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -546,9 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -607,21 +636,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
