--- a/Xcepetion.ipynb
+++ b/Xcepetion.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -440,12 +440,12 @@
     "# Top Model Block\n",
     "x = base_model.output\n",
     "x = GlobalAveragePooling2D()(x)\n",
-    "predictions = Dense(nb_classes, activation='relu')(x)"
+    "predictions = Dense(nb_classes, activation='sigmoid')(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -586,11 +586,11 @@
       "Starting to Tune Model\n",
       "\n",
       "Epoch 1/2\n",
-      "63/64 [============================>.] - ETA: 2s - loss: 3.3738 - acc: 0.4970Epoch 00000: val_acc improved from -inf to 0.53935, saving model to weights-improvement-00-0.54.hdf5\n",
-      "64/64 [==============================] - 216s - loss: 3.3628 - acc: 0.4961 - val_loss: 3.2802 - val_acc: 0.5394\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.9997 - acc: 0.5140Epoch 00000: val_acc improved from -inf to 0.54861, saving model to weights-improvement-00-0.55.hdf5\n",
+      "64/64 [==============================] - 206s - loss: 0.9986 - acc: 0.5147 - val_loss: 0.9605 - val_acc: 0.5486\n",
       "Epoch 2/2\n",
-      "63/64 [============================>.] - ETA: 1s - loss: 3.2170 - acc: 0.5517Epoch 00001: val_acc improved from 0.53935 to 0.54630, saving model to weights-improvement-01-0.55.hdf5\n",
-      "64/64 [==============================] - 186s - loss: 3.1894 - acc: 0.5558 - val_loss: 3.3677 - val_acc: 0.5463\n",
+      "63/64 [============================>.] - ETA: 1s - loss: 0.9171 - acc: 0.5830Epoch 00001: val_acc improved from 0.54861 to 0.55556, saving model to weights-improvement-01-0.56.hdf5\n",
+      "64/64 [==============================] - 185s - loss: 0.9170 - acc: 0.5836 - val_loss: 0.9544 - val_acc: 0.5556\n",
       "Finished tuning\n"
      ]
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
