XCEPTION: added data augmentation

--- a/Xcepetion.ipynb
+++ b/Xcepetion.ipynb
@@ -387,7 +387,7 @@
     "nb_classes = 3  # number of classes\n",
     "img_width, img_height = 299, 299  # change based on the shape/structure of your images\n",
     "batch_size = 16  # try 4, 8, 16, 32, 64, 128, 256 dependent on CPU/GPU memory capacity (powers of 2 values).\n",
-    "nb_epoch = 2  # number of iteration the algorithm gets trained. 1 As test run\n",
+    "nb_epoch = 50  # number of iteration the algorithm gets trained. 1 As test run\n",
     "\n",
     "momentum = 0.9  # sgd momentum to avoid local minimum\n",
     "transformation_ratio = .05  # how aggressive will be the data augmentation/transformation"
@@ -479,7 +479,12 @@
    "source": [
     "# Read Data and Augment it: Make sure to select augmentations that are appropriate to your images.\n",
     "# To save augmentations un-comment save lines and add to your flow parameters.\n",
-    "train_datagen = ImageDataGenerator(rescale=1. / 255)"
+    "# prepare data augmentation configuration\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "    rescale=1. / 255,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "horizontal_flip=True)"
    ]
   },
   {
@@ -628,6 +633,18 @@
     "# serialize weights to HDF5\n",
     "model.save_weights(\"model_xception.h5\")\n",
     "print(\"Saved model to disk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODOs:\n",
+    "\n",
+    "- more aggresive data augmentation\n",
+    "- more aggressive dropout\n",
+    "- use of L1 and L2 regularization (also known as \"weight decay\")\n",
+    "- fine-tuning one more convolutional block (alongside greater regularization)\n"
    ]
   },
   {
