--- a/Vgg16_2.ipynb
+++ b/Vgg16_2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
     "validation_data_dir = 'data/valid'\n",
     "nb_train_samples = 5919\n",
     "nb_validation_samples = 444\n",
-    "nb_epochs = 2\n",
+    "nb_epochs = 10\n",
     "batch_size = 16\n",
     "nb_classes = 3"
    ]
@@ -277,17 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2\n",
-      "369/369 [==============================] - 1397s - loss: 1.1428 - acc: 0.5147 - val_loss: 1.5437 - val_acc: 0.4560\n",
-      "Epoch 2/2\n",
-      "369/369 [==============================] - 1361s - loss: 0.7924 - acc: 0.6602 - val_loss: 1.0858 - val_acc: 0.5278\n"
+      "Epoch 1/10\n",
+      "368/369 [============================>.] - ETA: 3s - loss: 0.6407 - acc: 0.7423Epoch 00000: val_loss improved from inf to 1.32566, saving model to vgg16-weights-improvement-00-1.33.hdf5\n",
+      "369/369 [==============================] - 1427s - loss: 0.6399 - acc: 0.7425 - val_loss: 1.3257 - val_acc: 0.5093\n",
+      "Epoch 2/10\n",
+      "145/369 [==========>...................] - ETA: 767s - loss: 0.4662 - acc: 0.8073"
      ]
     }
    ],
@@ -298,29 +299,22 @@
     "    steps_per_epoch=nb_train_samples // batch_size,\n",
     "    epochs=nb_epochs,\n",
     "    validation_data=validation_generator,\n",
-    "    validation_steps=nb_validation_samples // batch_size)"
+    "    validation_steps=nb_validation_samples // batch_size,\n",
+    "    callbacks=callbacks_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to disk\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# serialize model to JSON\n",
     "model_json = model.to_json()\n",
     "with open(\"model_vgg16.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"model_vgg16.h5\")\n",
+    "model.save_weights(\"model_vgg162.h5\")\n",
     "print(\"Saved model to disk\")"
    ]
   },
