--- a/ConvNet_from_Scratch.ipynb
+++ b/ConvNet_from_Scratch.ipynb
@@ -400,13 +400,7 @@
       "63/64 [============================>.] - ETA: 2s - loss: 1.2304 - acc: 0.4096Epoch 00031: val_acc did not improve\n",
       "64/64 [==============================] - 194s - loss: 1.2308 - acc: 0.4052 - val_loss: 1.1947 - val_acc: 0.2130\n",
       "Epoch 33/100\n",
-      "63/64 [============================>.] - ETA: 2s - loss: 1.2740 - acc: 0.3521Epoch 00032: val_acc did not improve\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "63/64 [============================>.] - ETA: 2s - loss: 1.2740 - acc: 0.3521Epoch 00032: val_acc did not improve\n",
       "64/64 [==============================] - 195s - loss: 1.2759 - acc: 0.3505 - val_loss: 1.4200 - val_acc: 0.4792\n",
       "Epoch 34/100\n",
       "63/64 [============================>.] - ETA: 2s - loss: 1.1837 - acc: 0.3739Epoch 00033: val_acc did not improve\n",
